--- a/src/config.json
+++ b/src/config.json
@@ -1,4 +1,4 @@
 {
-    "$desc": "UE4 version. '4.18', '4.19', and 'ff7r' are supported.",
+    "$desc": "UE4 version. '4.27', '4.19', '4.18', and 'ff7r' are supported.",
     "version": "4.18"
 }
