modify data structure, improve readability

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -35,6 +35,9 @@ jobs:
           cp python.exe ../../release/python
           cp python39.dll ../../release/python
           cp python39.zip ../../release/python
+          cp libffi-7.dll ../../release/python
+          cp _ctypes.pyd ../../release/python
+          cp LICENSE.txt../../release/python
           cd ../
           cp -r src ../release
           cp bat/* ../release
