add support for gui

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -10,7 +10,7 @@ env:
   ZIP_NAME: UE4-DDS-Tools
 
 jobs:
-  build:
+  packaging:
     runs-on: windows-2022
     steps:
     
@@ -37,7 +37,7 @@ jobs:
           cp python39.zip ../../release/python
           cp libffi-7.dll ../../release/python
           cp _ctypes.pyd ../../release/python
-          cp LICENSE.txt../../release/python
+          cp LICENSE.txt ../../release/python
           cd ../
           cp -r src ../release
           cp bat/* ../release
