--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -47,6 +47,7 @@ jobs:
           curl -OL https://github.com/matyalatte/Simple-Command-Runner/releases/download/v0.0.1/SimpleCommandRunner-v0.0.1.zip
           unzip -d SimpleCommandRunner SimpleCommandRunner-v0.0.1.zip
           cp SimpleCommandRunner/SimpleCommandRunner.exe ../release/GUI.exe
+          cp gui_definition.json ../release
 
         shell: bash
 
