--- a/src/config.json
+++ b/src/config.json
@@ -1,4 +1,4 @@
 {
-    "$desc": "UE4 version. '4.27', '4.26', '4.25', '4.19', '4.18', '4.15', 'ff7r', and 'bloodstained' are available.",
-    "version": "4.15"
+    "$desc": "UE4 version. 4.27 ~ 4.18, 4.15, and ff7r are available.",
+    "version": "ff7r"
 }
