--- a/src/config.json
+++ b/src/config.json
@@ -1,4 +1,4 @@
 {
-    "$desc": "UE4 version. 4.27 ~ 4.13, and ff7r are available.",
+    "$desc": "UE4 version. 4.27 ~ 4.13, ff7r, and borderlans3 are available.",
     "version": "ff7r"
 }
