--- a/.gitignore
+++ b/.gitignore
@@ -5,11 +5,14 @@ python
 #generated files
 *.exe
 *.dll
+*.so
+*.dylib
 *.zip
 gui_config.json
-*/exported
-*/injected
-*/workspace
+exported
+injected
+converted
+test
 
 #for testing
 *test*
