--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -46,7 +46,7 @@ jobs:
           cp -r src release
           cp docs/changelog.txt release
           cp docs/README.url release
-          cp LICENSE release
+          cp LICENSE release/src
           cp -r release release_gui
           cp bat/* release
         shell: bash
