--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -33,8 +33,8 @@ jobs:
 
       - name: Linting
         run: |
-          flake8 --max-line-length 119 --exclude ".git,.pytest_cache,external,htmlcov,python,tmp"
-          codespell -L "splitted,ue" -S ".git,.pytest_cache,external,htmlcov,python,tmp"
+          flake8
+          codespell
 
       - name: Test
         env:
